src/test/ui/traits/traits-inductive-overflow-two-traits.stderr
error[E0275]: overflow evaluating the requirement `*mut (): Magic`
  --> $DIR/traits-inductive-overflow-two-traits.rs:19:5
   |
LL | fn wizard<T: Magic>() { check::<<T as Magic>::X>(); }
   |    ------    ----- required by this bound in `wizard`
...
LL |     wizard::<*mut ()>();
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
